fixed content. General cleanup

--- a/_includes/external.html
+++ b/_includes/external.html
@@ -1,5 +1,5 @@
-<nav class="navigation">
-    {% for item in site.data.navigation %}
+<nav class="center">
+    {% for item in site.data.external %}
     <a href="{{ item.link }}" >
         <i class="{{ item.icon }}"></i>
         {{ item.name }}</a>
