--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,6 @@
+body {background-color: #9999cc}
+.navigation { margin-bottom: 40px; }
+
 ol {
   counter-reset: li; /* Initiate a counter */
   list-style: none; /* Remove default numbering */
@@ -49,4 +52,11 @@ ol ol {
   font-weight: bold;
   border-radius: 2em;
   transition: all .3s ease-out;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
